Benefits section added along with tweaks to improve readability, bug fixes (Note: forgetting to close div tags will result in undefined container behavior), and some minor adjustments

--- a/style.css
+++ b/style.css
@@ -1,34 +1,32 @@
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
-
 html {
   font-size: 62.5%;
 }
-h1 {
-  font-size: 2rem;
-}
+
 body {
   font-family: "Poppins", sans-serif;
-  font-weight: normal;
 }
 
-label,
+h1 {
+  font-size: 2.6rem;
+}
+li,
 button,
-p,
+label,
 input,
-li {
-  font-size: 1.5rem;
+p {
+  font-size: 2rem;
 }
-
 h2 {
-  font-size: 4rem;
+  font-size: 4.8rem;
 }
 h3 {
-  font-size: 2rem;
-  font-weight: lighter;
+  font-size: 3rem;
+  font-weight: normal;
 }
 h4,
 h5 {
@@ -43,13 +41,13 @@ a:hover {
   font-weight: bold;
 }
 button {
-  background-color: #4c6e97;
-  padding: 1rem 4rem;
-  color: whitesmoke;
-  border-radius: 1rem;
+  padding: 2rem 6rem;
+  background: #4c6e97;
   border: none;
+  color: whitesmoke;
+  font-size: 1.8rem;
   cursor: pointer;
-  transition: background 0.4s ease;
+  transition: background 0.4s ease-in-out;
 }
 
 button:hover {
@@ -58,57 +56,56 @@ button:hover {
 }
 
 /* Nav Section with HERO */
-.main-header {
+.main-head {
   background: #131c27;
   color: whitesmoke;
 }
 
 nav {
-  min-height: 10vh;
   display: flex;
   width: 90%;
   margin: auto;
-  flex-wrap: wrap;
+  padding: 2rem;
+  min-height: 10vh;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 nav ul {
   display: flex;
   flex: 1 1 40rem;
+  justify-content: space-around;
   align-items: center;
-  justify-content: space-evenly;
   list-style: none;
 }
-
 #logo {
-  font-size: 2.5rem;
+  flex: 2 1 40rem;
   font-family: "Pattaya", sans-serif;
-  flex: 2 1 30rem;
-  font-weight: lighter;
+  font-weight: 400;
   cursor: pointer;
 }
 
 .hero {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), transparent),
+  min-height: 90vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.75), transparent),
     url("/starting-files/img/landing-page8.jpg");
-  height: 90vh;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  color: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  text-align: center;
   align-items: center;
-  color: whitesmoke;
+  text-align: center;
   text-shadow: 0.2rem 0.2rem rgba(0, 0, 0, 0.486);
 }
 .hero h3 {
-  padding: 3rem;
-  font-weight: 340;
+  padding: 5rem;
+  font-weight: lighter;
 }
 .hero i {
-  font-weight: 100;
+  font-weight: lighter;
 }
 
 /* Locations */
@@ -120,23 +117,24 @@ nav ul {
   background-position: center;
   background-size: cover;
   display: flex;
+  align-items: center;
   position: relative;
   overflow: hidden;
 }
 
-.locations-header {
+.locations-head {
   width: 90%;
   margin: auto;
   font-weight: 400;
 }
 
-.locations-header h2 {
-  padding: 3rem 0rem;
+.locations-head h2 {
+  padding: 1rem 0rem;
   text-decoration-line: underline;
   text-decoration-thickness: 0.5rem;
 }
-.locations-header h3 {
-  font-size: 2.3rem;
+.locations-head h3 {
+  font-size: 2.2rem;
   background: linear-gradient(#131c27, #663b34);
   background-clip: text;
   -webkit-background-clip: text;
@@ -178,6 +176,42 @@ nav ul {
   }
 }
 
+/* Benefits */
+
+.benefits-head {
+  background: #343c44;
+  padding: 3rem;
+  min-height: 30vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  text-align: center;
+}
+.benefits-head h3 {
+  padding: 1rem;
+}
+
+.cards {
+  width: 90%;
+  margin: auto;
+  min-height: 70vh;
+  display: flex;
+  position: relative;
+  align-items: center;
+}
+
+.card {
+  background: lightcoral;
+  flex: 1 1 25rem;
+  min-height: 40vh;
+  margin: 2rem 5rem;
+}
+.cards img {
+  height: 100px;
+}
+
 /* Media Query */
 @media screen and (max-width: 777px) {
   nav {
@@ -198,7 +232,6 @@ nav ul {
   }
 
   .locations-header h3 {
-    height: 40vh;
     background: whitesmoke;
     background-clip: text;
     -webkit-background-clip: text;
